--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "node node_modules/nodemon/bin/nodemon.js  src/backend/app.js | node_modules/bunyan/bin/bunyan"
   },
   "dependencies": {
-    "babelify": "^7.0.2",
-    "browserify": "^12.0.1",
+    "babel-core": "^5.8.24",
+    "babel-eslint": "^4.1.2",
+    "babelify": "^6.3.0",
+    "browserify": "^11.1.0",
     "browserify-incremental": "^3.0.1",
     "bunyan": "^1.5.1",
     "express": "^4.13.3",
