--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mercury": "^14.0.0",
     "node-sass": "^3.4.1",
     "nodemon": "^1.8.0",
+    "parsimmon": "^0.7.0",
     "xtend": "^4.0.1"
   },
   "engines": {
