--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "scripts": {
     "test": "./node_modules/nodeunit/bin/nodeunit src/test/index.js",
-    "start": "node node_modules/nodemon/bin/nodemon.js  src/backend/app.js | node_modules/bunyan/bin/bunyan"
+    "start": "node node_modules/nodemon/bin/nodemon.js  src/main/backend/app.js | node_modules/bunyan/bin/bunyan"
   },
   "dependencies": {
     "babel-core": "^5.8.24",
