--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^5.8.24",
     "babel-eslint": "^4.1.2",
     "babelify": "^6.3.0",
+    "body-parser": "^1.15.0",
     "browserify": "^11.1.0",
     "browserify-incremental": "^3.0.1",
     "bunyan": "^1.5.1",
@@ -23,6 +24,7 @@
     "nodemon": "^1.8.0",
     "parsimmon": "^0.7.0",
     "request-promise": "^1.0.2",
+    "vdom-to-html": "^2.2.0",
     "xtend": "^4.0.1"
   },
   "engines": {
