--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "babel-core": "^5.8.24",
     "babel-eslint": "^4.1.2",
     "babelify": "^6.3.0",
+    "bodec": "^0.1.0",
     "body-parser": "^1.15.0",
     "browserify": "^11.1.0",
     "browserify-incremental": "^3.0.1",
     "bunyan": "^1.5.1",
+    "culvert": "^0.1.2",
     "express": "^4.13.3",
+    "git-sha1": "^0.1.2",
+    "git-tree": "git://github.com/freekh/git-tree.git",
     "global": "^4.3.0",
-    "js-git": "^0.7.7",
-    "js-github": "^1.0.0",
+    "jon-parse": "git://github.com/creationix/jon-parse.git",
+    "js-git": "git://github.com/freekh/js-git.git",
+    "js-github": "git://github.com/freekh/js-github.git",
     "mercury": "^14.0.0",
     "node-sass": "^3.4.1",
     "nodemon": "^1.8.0",
