--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "description": "The Amazing Shell In The Cloud",
   "scripts": {
-    "start": "node ./node_modules/nodemon/bin/nodemon.js ./code/backend/index.js | node ./node_modules/bunyan/bin/bunyan"
+    "start": "node ./node_modules/nodemon/bin/nodemon.js ./code/backend/index.js | node ./node_modules/bunyan/bin/bunyan",
+    "test": "node ./node_modules/nodeunit/bin/nodeunit tests | node ./node_modules/bunyan/bin/bunyan"
   },
   "author": "Fredrik Ekholdt",
   "devDependencies": {
-    "nodemon": "^1.9.2"
+    "nodemon": "^1.9.2",
+    "nodeunit": "^0.9.1"
   },
   "dependencies": {
     "babelify": "^7.3.0",
@@ -15,12 +17,14 @@
     "browserify": "^13.0.1",
     "browserify-incremental": "^3.1.1",
     "bunyan": "^1.8.1",
+    "es6-promisify": "^4.1.0",
     "express": "^4.13.4",
     "hyperscript": "git+https://github.com/freekh/hyperscript.git",
     "multer": "^1.1.0",
     "node-sass": "^3.7.0",
     "parsimmon": "git+https://github.com/freekh/parsimmon.git",
     "pg": "^4.5.5",
+    "pg-native": "^1.10.0",
     "uglifyify": "^3.0.1"
   },
   "engines": {
