Something old, something new, something borrowed, something blue

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,6 @@
   "extends": "airbnb",
   "rules": {
     "no-shadow": 0,
-    "arrow-body-style": ["error", "always"],
+    "arrow-body-style": 0,
   }
 }
