--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "parsimmon": "git+https://github.com/freekh/parsimmon.git",
     "pg": "^4.5.5",
     "pg-native": "^1.10.0",
-    "uglifyify": "^3.0.1"
+    "uglifyify": "^3.0.1",
+    "xhr2": "^0.1.3"
   },
   "engines": {
     "node": ">=6.2"
