--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify": "^13.0.1",
     "browserify-incremental": "^3.1.1",
     "bunyan": "^1.8.1",
+    "codemirror": "^5.16.0",
     "es6-promisify": "^4.1.0",
     "express": "^4.13.4",
     "hyperscript": "git+https://github.com/freekh/hyperscript.git",
