--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nodeunit": "^0.9.1"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2016": "^6.11.3",
     "babelify": "^7.3.0",
     "body-parser": "^1.15.1",
     "browserify": "^13.0.1",
@@ -24,8 +26,6 @@
     "multer": "^1.1.0",
     "node-sass": "^3.7.0",
     "parsimmon": "git+https://github.com/freekh/parsimmon.git",
-    "pg": "^4.5.5",
-    "pg-native": "^1.10.0",
     "uglifyify": "^3.0.1",
     "xhr2": "^0.1.3"
   },
